# e-commerce

e-commerce-app/: package-lock.json
e-commerce-app/src/: api.js
e-commerce-server/: api.js  database.db  pyproject.toml
e-commerce-server/src/: main.py
e-commerce-server/src/auth/: dependecies.py  erros.py  repository.py  routes.py  schema.py  utils.py
e-commerce-server/src/core/: config.py  database.py  security.py
e-commerce-server/src/user/: model.py  repository.py  routes.py  schema.py
e-commerce-server/src/vehicle/: model.py  repository.py  routes.py  schema.py
