[project]
name = "e-commerce-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.13.1",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
